--- a/index.html
+++ b/index.html
@@ -1,7 +1,95 @@
+
+   
 <!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Poor Weather Conditions? What To Do For Fun!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" integrity="sha512-wnea99uKIC3TJF7v4eKk4Y+lMz2Mklv18+r4na2Gn1abDRPPOeef95xTzdwGD9e6zXJBteMIhZ1+68QC5byJZw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style-cards.css">
+</head>
+<body class="bg-green-100 font-serif md:my-4 mx-auto p-4 container w-screen">
+    <header id="header" class="text-center p-3 mb-3">
+        <h1 class="font-bold text-5xl">Date-night in Austin</h1>
+    </header>
+    <main class="text-center p-3">
+        <div id="wrap">
+            <h2 class="text-xl">Where would you like to search?</h2>
+            <section class="border-b-4 border-black my-2 pb-6 columns-5">
+                <ul class="inline-flex">
+                    <li class="mx-4">
+                        <input name="location-selector" value="bee-caves" id="bee-caves" type="radio"></input>
+                        <h3 class="px-2 text-lg">Bee Caves</h3>
+                    </li>
+                    <li class="mx-4">
+                        <input name="location-selector" value="southwest" id="southwest" type="radio"></input>
+                        <h3 class="px-2 text-lg">Southwest Austin</h3>
+                    </li>
+                    <li class="mx-4">
+                        <input name="location-selector" value="downtown" id="downtown" type="radio"></input>
+                        <h3 class="px-2 text-lg">Downtown Austin</h3>
+                    </li>
+                    <li class="mx-4">
+                        <input name="location-selector" value="north" id="north" type="radio"></input>
+                        <h3 class="px-2 text-lg">North Austin</h3>
+                    </li>
+                    <li class="mx-4">
+                        <input name="location-selector" value="southeast" id="southeast" type="radio"></input>
+                        <h3 class="px-2 text-lg">Southeast Austin</h3>
+                    </li>
+                </ul>
+            </section>
+            <br>
+            <h2 class="text-xl">Choose which category you'd like to see in your results:</h2>
+            </div>
+            <section id="section" class="border-b-4 border-black my-2 pb-6 columns-5">
+                <ul class="inline-flex content-center">
+                    <li class="mx-6">
+                        <input name="category-selector" id="drinks" type="radio" value="drinks"></input>
+                        <h3 class="px-2 text-lg">drinks</h3>
+                    </li>
+                    <li class="mx-6">
+                        <input name="category-selector" id="entertainment" type="radio" value="entertainment"></input>
+                        <h3 class="text-lg">entertainment</h3>
+                    </li>
+                    <li class="mx-6">
+                        <input name="category-selector" id="active" type="radio" value="active"></input>
+                        <h3 class="text-lg">active</h3>
+                    </li>
+                    <li class="mx-6">
+                        <input name="category-selector" id="food" type="radio" value="food"></input>
+                        <h3 class="text-lg">food</h3>
+                    </li>
+                    <li class="mx-6">
+                        <input name="category-selector" id="atmosphere" type="radio" value="outdoors"></input>
+                        <h3 class="text-lg">outdoors</h3>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <p id="error" class="text-red-700 mt-4 text-xl hide">Please choose both a zone and a category for your results.</p>
+        <br>
+        <button id="submit-button" class="mx-4 text-white bg-blue-500 hover:bg-blue-700 font-bold py-2 px-4 rounded">Submit</button>
+        <div id="weather-results" class="border-b-4 border-black hide py-2 m-4">
+            <!-- <p class="text-lg">The weather today will be 42 degrees with a 30% chance of rain.</p><br> -->
+            <!-- <p>It will be windy with a wind-chill of 36 degrees.<p> -->
+        </div>
+        <div id="location-results" class="border-b-4 border-black hide py-2 pb-5 m-4">
+            <h2 class="text-3xl mb-2">Checkout these top area results and what people are saying about them!</h2>
+            <p class="mb-5">(Click on a card to search for more info)</p>
+            <div id="location-results-list" class="grid grid-flow-row md:grid-rows-6 lg:grid-rows-4 md:grid-flow-col gap-3"> 
+            </div> 
+        </div>
+        <div id="popular-places" class="border-b-4 border-black hide py-2 pb-5 m-4">
+            <h2 class="text-3xl mb-2">Top results for all zones and what people are saying about them!</h2>
+            <p class="mb-5">(Click on a card for more info)</p>
+            <div id="popular-places-list" class="grid grid-flow-row md:grid-rows-5 lg:grid-rows-2 md:grid-flow-col gap-3"></div>
+        </div>
+        <button id="go-back-button" class="m-2 text-white bg-blue-500 hover:bg-blue-700 font-bold py-2 px-4 rounded hide">Go Back</button>
+    </main>
+</body>
+<script src="./assets/js/script.js"></script>
 </html>
