--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/style-cards.css">
 </head>
-<body class="bg-green-100 font-serif md:my-4 mx-auto p-4 container w-screen">
+<body class="bg-gray-100 font-serif md:my-4 mx-auto p-4 container w-screen">
     <header id="header" class="text-center p-3 mb-3">
-        <h1 class="font-bold text-5xl">Date-night in Austin</h1>
+        <h1 class="font-bold text-5xl">Dont Let Weather Ruin Your Plans</h1>
     </header>
     <main class="text-center p-3">
         <div id="wrap">
